--- a/about.html
+++ b/about.html
@@ -9,100 +9,78 @@
 <body>
     <div class="background-overlay"></div>
     
-    <div class="p-view" id="pView">
+    <div class="p-view">
         <header class="p-header">
             <div class="p-avatar-wrap">
                 <img src="image/icon.jpeg" class="p-avatar">
                 <div class="p-gloss"></div>
             </div>
-            <div class="p-title">
-                <h1>Hello</h1>
-                <h2>我係TNH</h2>
-            </div>
+            <div class="p-title"><h1>Hello</h1><h2>我係TNH</h2></div>
         </header>
-
-        <section class="p-content">
-            <div class="p-info-block">
-                <h3>一個</h3>
-                <p>創作者、玩家、HongKonger、Minecrafter、測試者、設計者、開發者</p>
-            </div>
-            <div class="p-info-block">
-                <h3>興趣</h3>
-                <p>Minecraft、創作、懷舊設計、軟件修改</p>
-            </div>
-            <div class="p-works-area">
+        <section class="p-body">
+            <div class="p-section"><h3>一個</h3><p>創作者、玩家、HongKonger、Minecrafter...</p></div>
+            <div class="p-section"><h3>興趣</h3><p>Minecraft、創作、懷舊設計...</p></div>
+            <div class="p-works">
                 <h3>作品</h3>
-                <div class="p-flow-container" id="pFlow">
-                    <div class="p-card active">作品 1</div>
-                    <div class="p-card next">作品 2</div>
-                    <div class="p-card hidden">作品 3</div>
-                    <div class="p-card hidden">作品 4</div>
-                    <div class="p-card hidden">作品 5</div>
+                <div class="p-flow" id="pFlow">
+                    <div class="p-item active">作品 1</div>
+                    <div class="p-item next">作品 2</div>
+                </div>
+            </div>
+            <div class="p-social">
+                <h3>關注我</h3>
+                <div class="p-social-row">
+                    <img src="image/ig.png"><img src="image/yt.png"><img src="image/rd.png">
                 </div>
             </div>
         </section>
-
-        <footer class="p-footer">
-            <h3>關注我</h3>
-            <div class="social-grid">
-                <a href="#"><img src="image/ig.png"></a>
-                <a href="#"><img src="image/th.png"></a>
-                <a href="#"><img src="image/yt.png"></a>
-                <a href="#"><img src="image/rd.png"></a>
-                <a href="#"><img src="image/tw.png"></a>
-            </div>
-        </footer>
     </div>
 
-    <div class="l-view" id="lView">
-        <div class="l-panel active" id="lHome">
-            <div class="l-home-left">
-                <div class="l-profile">
-                    <img src="image/icon.jpeg" class="l-avatar">
-                    <div class="l-title">
-                        <h1>Hello</h1>
-                        <h2>我係TNH</h2>
-                    </div>
-                </div>
-                <div class="l-desc">
-                    <p><strong>一個</strong> 創作者、HongKonger、Minecrafter、測試者、設計者、開發者</p>
-                    <p><strong>興趣</strong> Minecraft、創作、懷舊設計、軟件修改</p>
-                </div>
+    <div class="l-view l-home-view active" id="lHome">
+        <div class="l-home-left">
+            <div class="l-info-group">
+                <div class="l-info-item"><h3>一個</h3><p>創作者、HongKonger、Minecrafter、測試者、設計者、開發者</p></div>
+                <div class="l-info-item"><h3>興趣</h3><p>Minecraft、創作、懷舊設計、軟件修改</p></div>
             </div>
-            <div class="l-home-right">
-                <div class="l-social-box">
-                    <h3>關注我</h3>
-                    <div class="social-grid">
-                        <img src="image/ig.png">
-                        <img src="image/th.png">
-                        <img src="image/yt.png">
-                        <img src="image/rd.png">
-                        <img src="image/tw.png">
-                    </div>
+            <button class="l-btn-browse" onclick="switchL('lWorks')">瀏覽作品</button>
+        </div>
+        <div class="l-home-right">
+            <div class="l-profile-header">
+                <img src="image/icon.jpeg" class="l-avatar">
+                <div class="l-name"><h1>Hello</h1><h2>我係TNH</h2></div>
+            </div>
+            <div class="l-social-section">
+                <h3>關注我</h3>
+                <div class="l-social-grid">
+                    <img src="image/ig.png"><img src="image/th.png"><img src="image/yt.png">
+                    <img src="image/rd.png"><img src="image/tw.png">
                 </div>
-                <button class="l-btn-main" onclick="navTo('lWorks')">瀏覽作品</button>
             </div>
         </div>
+    </div>
 
-        <div class="l-panel" id="lWorks">
-            <div class="l-works-main">
-                <div class="l-preview-container">
-                    <div class="l-preview-box active">作品 1</div>
-                    <div class="l-preview-box">作品 2</div>
-                    <div class="l-preview-box">作品 3</div>
-                </div>
-                <div class="l-sidebar">
-                    <h3>我的作品</h3>
-                    <ul class="l-list">
-                        <li class="active" onclick="selL(0)">作品 1</li>
-                        <li onclick="selL(1)">作品 2</li>
-                        <li onclick="selL(3)">作品 3</li>
-                    </ul>
-                </div>
+    <div class="l-view l-works-view" id="lWorks">
+        <div class="l-fr-stage">
+            <div class="l-fr-container" id="frContainer">
+                <div class="fr-item active">作品 1</div>
+                <div class="fr-item next">作品 2</div>
+                <div class="fr-item hidden">作品 3</div>
             </div>
-            <div class="l-footer">
-                <button class="l-btn gray" onclick="navTo('lHome')">關閉</button>
-                <button class="l-btn blue">前往</button>
+            <div class="l-fr-controls">
+                <button class="l-btn-footer gray" onclick="switchL('lHome')">關閉</button>
+                <button class="l-btn-footer blue">前往</button>
+            </div>
+        </div>
+        <div class="l-fr-sidebar">
+            <h3>我的作品</h3>
+            <div class="l-fr-menu-wrap">
+                <ul class="l-fr-list">
+                    <li class="active" onclick="selFR(0)">作品 1</li>
+                    <li onclick="selFR(1)">作品 2</li>
+                    <li onclick="selFR(2)">作品 3</li>
+                    <li onclick="selFR(3)">作品 4</li>
+                    <li onclick="selFR(4)">作品 5</li>
+                </ul>
             </div>
         </div>
     </div>
