--- a/about.html
+++ b/about.html
@@ -15,23 +15,34 @@
                 <img src="image/icon.jpeg" class="p-avatar">
                 <div class="p-gloss"></div>
             </div>
-            <div class="p-title"><h1>Hello</h1><h2>我係TNH</h2></div>
+            <div class="p-title">
+                <h1>Hello</h1>
+                <h2>我係TNH</h2>
+            </div>
         </header>
-        <section class="p-content">
-            <div class="p-info-block"><h3>一個</h3><p>創作者、玩家、Minecrafter、測試者、設計者、開發者</p></div>
-            <div class="p-info-block"><h3>興趣</h3><p>Minecraft、創作、懷舊設計、軟件修改</p></div>
-            <div class="p-works-area">
+
+        <section class="p-body">
+            <div class="p-section">
+                <h3>一個</h3>
+                <p>創作者、玩家、HongKonger、Minecrafter、測試者、設計者、開發者</p>
+            </div>
+            <div class="p-section">
+                <h3>興趣</h3>
+                <p>Minecraft、創作、懷舊設計、軟件修改</p>
+            </div>
+            <div class="p-works-wrap">
                 <h3>作品</h3>
-                <div class="p-flow-container" id="pFlow">
+                <div class="p-flow" id="pFlow">
                     <div class="p-card active">作品 1</div>
                     <div class="p-card next">作品 2</div>
                     <div class="p-card hidden">作品 3</div>
                 </div>
             </div>
         </section>
+
         <footer class="p-footer">
             <h3>關注我</h3>
-            <div class="social-grid">
+            <div class="social-row">
                 <img src="image/ig.png"><img src="image/th.png"><img src="image/yt.png"><img src="image/rd.png"><img src="image/tw.png">
             </div>
         </footer>
@@ -40,20 +51,30 @@
     <div class="l-view">
         <div class="l-panel active" id="lHome">
             <div class="l-home-left">
-                <div class="l-info-top">
-                    <div class="l-section"><h3>一個</h3><p>創作者、玩家、HongKonger、Minecrafter、測試者、設計者、開發者</p></div>
-                    <div class="l-section"><h3>興趣</h3><p>Minecraft、創作、懷舊設計、軟件修改</p></div>
+                <div class="l-home-info">
+                    <div class="info-group">
+                        <h3>一個</h3>
+                        <p>創作者、HongKonger、Minecrafter、測試者、設計者、開發者</p>
+                    </div>
+                    <div class="info-group">
+                        <h3>興趣</h3>
+                        <p>Minecraft、創作、懷舊設計、軟件修改</p>
+                    </div>
                 </div>
                 <button class="l-btn-browse" onclick="navTo('lWorks')">瀏覽作品</button>
             </div>
+            
             <div class="l-home-right">
-                <div class="l-profile-header">
+                <div class="l-header-row">
                     <img src="image/icon.jpeg" class="l-avatar">
-                    <div class="l-name-box"><h1>Hello</h1><h2>我係TNH</h2></div>
+                    <div class="l-title">
+                        <h1>Hello</h1>
+                        <h2>我係TNH</h2>
+                    </div>
                 </div>
-                <div class="l-social-footer">
+                <div class="l-social-section">
                     <h3>關注我</h3>
-                    <div class="social-grid">
+                    <div class="l-social-grid">
                         <img src="image/ig.png"><img src="image/th.png"><img src="image/yt.png"><img src="image/rd.png"><img src="image/tw.png">
                     </div>
                 </div>
@@ -61,22 +82,21 @@
         </div>
 
         <div class="l-panel" id="lWorks">
-            <div class="l-fr-main">
-                <div class="l-fr-display">
-                    <div class="l-fr-stack" id="frStack">
-                        <div class="fr-item active">作品 1</div>
-                        <div class="fr-item next">作品 2</div>
-                        <div class="fr-item hidden">作品 3</div>
-                        <div class="fr-item hidden">作品 4</div>
+            <div class="l-front-row-main">
+                <div class="l-display-area">
+                    <div class="fr-stage">
+                        <div class="fr-card current" id="frCurrent">作品 1</div>
+                        <div class="fr-card next" id="frNext">作品 2</div>
                     </div>
-                    <div class="l-fr-controls">
-                        <button class="l-btn-footer gray" onclick="navTo('lHome')">關閉</button>
-                        <button class="l-btn-footer blue">前往</button>
+                    <div class="l-controls">
+                        <button class="l-footer-btn gray" onclick="navTo('lHome')">關閉</button>
+                        <button class="l-footer-btn blue">前往</button>
                     </div>
                 </div>
-                <div class="l-fr-sidebar">
+
+                <div class="l-menu-area">
                     <h3>我的作品</h3>
-                    <div class="l-menu-scroll">
+                    <div class="menu-scroll">
                         <ul class="l-menu-list">
                             <li class="active" onclick="selFR(0)">作品 1</li>
                             <li onclick="selFR(1)">作品 2</li>
