--- a/about.html
+++ b/about.html
@@ -33,9 +33,11 @@
             <div class="p-works-wrap">
                 <h3>作品</h3>
                 <div class="p-flow" id="pFlow">
-                    <div class="p-card active">作品 1</div>
-                    <div class="p-card next">作品 2</div>
-                    <div class="p-card hidden">作品 3</div>
+                    <div class="p-card">作品 1</div>
+                    <div class="p-card">作品 2</div>
+                    <div class="p-card">作品 3</div>
+                    <div class="p-card">作品 4</div>
+                    <div class="p-card">作品 5</div>
                 </div>
             </div>
         </section>
