--- a/about.html
+++ b/about.html
@@ -21,30 +21,30 @@
             </div>
         </header>
 
-        <section class="p-body">
-            <div class="p-section">
+        <section class="p-sections">
+            <div class="p-box">
                 <h3>一個</h3>
                 <p>創作者、玩家、HongKonger、Minecrafter、測試者、設計者、開發者</p>
             </div>
-            <div class="p-section">
+            <div class="p-box">
                 <h3>興趣</h3>
                 <p>Minecraft、創作、懷舊設計、軟件修改</p>
             </div>
-            <div class="p-works-wrap">
+            <div class="p-works-box">
                 <h3>作品</h3>
-                <div class="p-flow" id="pFlow">
-                    <div class="p-card">作品 1</div>
-                    <div class="p-card">作品 2</div>
-                    <div class="p-card">作品 3</div>
-                    <div class="p-card">作品 4</div>
-                    <div class="p-card">作品 5</div>
+                <div class="p-coverflow-engine" id="pEngine">
+                    <div class="p-item">作品 1</div>
+                    <div class="p-item">作品 2</div>
+                    <div class="p-item">作品 3</div>
+                    <div class="p-item">作品 4</div>
+                    <div class="p-item">作品 5</div>
                 </div>
             </div>
         </section>
 
         <footer class="p-footer">
             <h3>關注我</h3>
-            <div class="social-row">
+            <div class="p-social-bar">
                 <img src="image/ig.png"><img src="image/th.png"><img src="image/yt.png"><img src="image/rd.png"><img src="image/tw.png">
             </div>
         </footer>
@@ -53,30 +53,26 @@
     <div class="l-view">
         <div class="l-panel active" id="lHome">
             <div class="l-home-left">
-                <div class="l-home-info">
-                    <div class="info-group">
+                <div class="l-info-stack">
+                    <div class="l-group">
                         <h3>一個</h3>
                         <p>創作者、HongKonger、Minecrafter、測試者、設計者、開發者</p>
                     </div>
-                    <div class="info-group">
+                    <div class="l-group">
                         <h3>興趣</h3>
                         <p>Minecraft、創作、懷舊設計、軟件修改</p>
                     </div>
                 </div>
-                <button class="l-btn-browse" onclick="navTo('lWorks')">瀏覽作品</button>
+                <button class="l-btn-action" onclick="goWorks()">瀏覽作品</button>
             </div>
-            
             <div class="l-home-right">
-                <div class="l-header-row">
+                <div class="l-profile-top">
                     <img src="image/icon.jpeg" class="l-avatar">
-                    <div class="l-title">
-                        <h1>Hello</h1>
-                        <h2>我係TNH</h2>
-                    </div>
+                    <div class="l-name"><h1>Hello</h1><h2>我係TNH</h2></div>
                 </div>
-                <div class="l-social-section">
+                <div class="l-social-bottom">
                     <h3>關注我</h3>
-                    <div class="l-social-grid">
+                    <div class="l-icon-row">
                         <img src="image/ig.png"><img src="image/th.png"><img src="image/yt.png"><img src="image/rd.png"><img src="image/tw.png">
                     </div>
                 </div>
@@ -84,27 +80,26 @@
         </div>
 
         <div class="l-panel" id="lWorks">
-            <div class="l-front-row-main">
-                <div class="l-display-area">
-                    <div class="fr-stage">
-                        <div class="fr-card current" id="frCurrent">作品 1</div>
-                        <div class="fr-card next" id="frNext">作品 2</div>
+            <div class="l-fr-engine">
+                <div class="l-fr-display">
+                    <div class="fr-stage-box">
+                        <div class="fr-main-card" id="frCurrent">作品 1</div>
+                        <div class="fr-back-card" id="frNext">作品 2</div>
                     </div>
-                    <div class="l-controls">
-                        <button class="l-footer-btn gray" onclick="navTo('lHome')">關閉</button>
-                        <button class="l-footer-btn blue">前往</button>
+                    <div class="l-fr-btns">
+                        <button class="fr-btn gray" onclick="goHome()">關閉</button>
+                        <button class="fr-btn blue">前往</button>
                     </div>
                 </div>
-
-                <div class="l-menu-area">
+                <div class="l-fr-sidebar">
                     <h3>我的作品</h3>
-                    <div class="menu-scroll">
-                        <ul class="l-menu-list">
-                            <li class="active" onclick="selFR(0)">作品 1</li>
-                            <li onclick="selFR(1)">作品 2</li>
-                            <li onclick="selFR(2)">作品 3</li>
-                            <li onclick="selFR(3)">作品 4</li>
-                            <li onclick="selFR(4)">作品 5</li>
+                    <div class="fr-menu-scroll">
+                        <ul id="frList">
+                            <li class="active" onclick="selFRItem(0)">作品 1</li>
+                            <li onclick="selFRItem(1)">作品 2</li>
+                            <li onclick="selFRItem(2)">作品 3</li>
+                            <li onclick="selFRItem(3)">作品 4</li>
+                            <li onclick="selFRItem(4)">作品 5</li>
                         </ul>
                     </div>
                 </div>
