--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
             </div>
         </header>
 
-        <section class="p-sections">
+        <section class="p-content-scroll">
             <div class="p-box">
                 <h3>一個</h3>
                 <p>創作者、玩家、HongKonger、Minecrafter、測試者、設計者、開發者</p>
@@ -32,7 +32,7 @@
             </div>
             <div class="p-works-box">
                 <h3>作品</h3>
-                <div class="p-coverflow-engine" id="pEngine">
+                <div class="p-flow-engine" id="pFlowEngine">
                     <div class="p-item">作品 1</div>
                     <div class="p-item">作品 2</div>
                     <div class="p-item">作品 3</div>
@@ -40,14 +40,14 @@
                     <div class="p-item">作品 5</div>
                 </div>
             </div>
+            
+            <footer class="p-footer">
+                <h3>關注我</h3>
+                <div class="p-social-row">
+                    <img src="image/ig.png"><img src="image/th.png"><img src="image/yt.png"><img src="image/rd.png"><img src="image/tw.png">
+                </div>
+            </footer>
         </section>
-
-        <footer class="p-footer">
-            <h3>關注我</h3>
-            <div class="p-social-bar">
-                <img src="image/ig.png"><img src="image/th.png"><img src="image/yt.png"><img src="image/rd.png"><img src="image/tw.png">
-            </div>
-        </footer>
     </div>
 
     <div class="l-view">
@@ -84,7 +84,7 @@
                 <div class="l-fr-display">
                     <div class="fr-stage-box">
                         <div class="fr-main-card" id="frCurrent">作品 1</div>
-                        <div class="fr-back-card" id="frNext">作品 2</div>
+                        <div class="fr-back-card-left" id="frNext">作品 2</div>
                     </div>
                     <div class="l-fr-btns">
                         <button class="fr-btn gray" onclick="goHome()">關閉</button>
