--- a/about.html
+++ b/about.html
@@ -10,44 +10,46 @@
     <div class="background-overlay"></div>
     
     <div class="p-view">
-        <header class="p-header">
-            <div class="p-avatar-wrap">
-                <img src="image/icon.jpeg" class="p-avatar">
-                <div class="p-gloss"></div>
-            </div>
-            <div class="p-title">
-                <h1>Hello</h1>
-                <h2>我係TNH</h2>
-            </div>
-        </header>
-
-        <section class="p-content-scroll">
-            <div class="p-box">
-                <h3>一個</h3>
-                <p>創作者、玩家、HongKonger、Minecrafter、測試者、設計者、開發者</p>
-            </div>
-            <div class="p-box">
-                <h3>興趣</h3>
-                <p>Minecraft、創作、懷舊設計、軟件修改</p>
-            </div>
-            <div class="p-works-box">
-                <h3>作品</h3>
-                <div class="p-flow-engine" id="pFlowEngine">
-                    <div class="p-item">作品 1</div>
-                    <div class="p-item">作品 2</div>
-                    <div class="p-item">作品 3</div>
-                    <div class="p-item">作品 4</div>
-                    <div class="p-item">作品 5</div>
+        <div class="p-scroll-content">
+            <header class="p-header">
+                <div class="p-avatar-wrap">
+                    <img src="image/icon.jpeg" class="p-avatar">
+                    <div class="p-gloss"></div>
                 </div>
-            </div>
-            
+                <div class="p-title">
+                    <h1>Hello</h1>
+                    <h2>我係TNH</h2>
+                </div>
+            </header>
+
+            <section class="p-sections">
+                <div class="p-box">
+                    <h3>一個</h3>
+                    <p>創作者、玩家、HongKonger、Minecrafter、測試者、設計者、開發者</p>
+                </div>
+                <div class="p-box">
+                    <h3>興趣</h3>
+                    <p>Minecraft、創作、懷舊設計、軟件修改</p>
+                </div>
+                <div class="p-works-box">
+                    <h3>作品</h3>
+                    <div class="p-coverflow-engine" id="pEngine">
+                        <div class="p-item">作品 1</div>
+                        <div class="p-item">作品 2</div>
+                        <div class="p-item">作品 3</div>
+                        <div class="p-item">作品 4</div>
+                        <div class="p-item">作品 5</div>
+                    </div>
+                </div>
+            </section>
+
             <footer class="p-footer">
                 <h3>關注我</h3>
-                <div class="p-social-row">
+                <div class="p-social-bar">
                     <img src="image/ig.png"><img src="image/th.png"><img src="image/yt.png"><img src="image/rd.png"><img src="image/tw.png">
                 </div>
             </footer>
-        </section>
+        </div>
     </div>
 
     <div class="l-view">
@@ -83,8 +85,8 @@
             <div class="l-fr-engine">
                 <div class="l-fr-display">
                     <div class="fr-stage-box">
-                        <div class="fr-main-card" id="frCurrent">作品 1</div>
                         <div class="fr-back-card-left" id="frNext">作品 2</div>
+                        <div class="fr-main-card" id="frCurrent">作品 1</div>
                     </div>
                     <div class="l-fr-btns">
                         <button class="fr-btn gray" onclick="goHome()">關閉</button>
