--- a/about.html
+++ b/about.html
@@ -94,15 +94,17 @@
                     </div>
                 </div>
                 <div class="l-fr-sidebar">
-                    <h3>我的作品</h3>
-                    <div class="fr-menu-scroll">
-                        <ul id="frList">
-                            <li class="active" onclick="selFRItem(0)">作品 1</li>
-                            <li onclick="selFRItem(1)">作品 2</li>
-                            <li onclick="selFRItem(2)">作品 3</li>
-                            <li onclick="selFRItem(3)">作品 4</li>
-                            <li onclick="selFRItem(4)">作品 5</li>
-                        </ul>
+                    <div class="fr-menu-container">
+                        <h3>我的作品</h3>
+                        <div class="fr-menu-scroll">
+                            <ul id="frList">
+                                <li class="active" onclick="selFRItem(0)">作品 1</li>
+                                <li onclick="selFRItem(1)">作品 2</li>
+                                <li onclick="selFRItem(2)">作品 3</li>
+                                <li onclick="selFRItem(3)">作品 4</li>
+                                <li onclick="selFRItem(4)">作品 5</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
