--- a/about.html
+++ b/about.html
@@ -84,9 +84,9 @@
         <div class="l-panel" id="lWorks">
             <div class="l-fr-engine">
                 <div class="l-fr-display">
-                    <div class="fr-stage-box">
-                        <div class="fr-back-card-left" id="frNext">作品 2</div>
-                        <div class="fr-main-card" id="frCurrent">作品 1</div>
+                    <div class="fr-stage-box" id="frStage">
+                        <div class="fr-card main" id="frCurrent">作品 1</div>
+                        <div class="fr-card back" id="frNext">作品 2</div>
                     </div>
                     <div class="l-fr-btns">
                         <button class="fr-btn gray" onclick="goHome()">關閉</button>
