--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
             <div class="l-fr-engine">
                 <div class="l-fr-display">
                     <div class="fr-stage-box" id="frStage">
-                        <div class="fr-card fr-hidden-right" id="frNextNext">作品 3</div>
+                        <div class="fr-card fr-hidden-pos" id="frNextNext">作品 3</div>
                         <div class="fr-card fr-back-pos" id="frBack">作品 2</div>
                         <div class="fr-card fr-main-pos" id="frMain">作品 1</div>
                     </div>
